# pii-redaction-openmed

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  STATUS.md  docker-compose.dev.yml  docker-compose.yml
api/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/routers/: __init__.py  config.py  documents.py  redact.py
cli/: README.md  pyproject.toml
cli/redactx/: __init__.py  main.py
core/: README.md  pyproject.toml
core/redac_core/: __init__.py  config.py  schemas.py
core/redac_core/services/: __init__.py  document_handler.py  redaction.py
docs/: api-reference.md  architecture.md  configuration.md  getting-started.md
web/: .cta.json  .dockerignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
web/src/: routeTree.gen.ts  styles.css
web/src/components/: EntityList.tsx  RedactedText.tsx  RedactionControls.tsx
web/src/routes/: __root.tsx  bulk.tsx  index.tsx  redact.tsx  settings.tsx
