[project]
name = "redactx"
version = "1.0.0"
description = "CLI tool for PII redaction powered by OpenMed"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "openmed>=0.5.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "httpx>=0.28.0",
]

[project.scripts]
redactx = "redactx.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["redactx"]
